# prosper-agent

./: .gitignore  Dockerfile  Dockerfile.server  README.md  bot.py  claim_flow.py  latency_evaluation.md  pcc-deploy.toml  pyproject.toml  server.py
agent/: bot.py  claim_flow.py  database.py  latency_observer.py
client/: server.py
server/: Dockerfile  README.md  pyproject.toml  server.py
supabase/: config.toml
supabase/migrations/: 20251012080825_create_conversations_table.sql  20251013000000_add_state_to_conversations.sql  20251014000000_add_latency_columns.sql  20251016000000_create_conversation_metrics_table.sql  20251016000001_remove_latency_from_conversations.sql
